test/arrays/shapes/error-if-non-DR-1.chpl

var ARR: [1..3] domain(int);

var PROMO = for idx in 1..3 do ARR;
